# Family-Care

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  security.py  seed.py
backend/app/models/: __init__.py  appointment.py  birthday.py  bp_reading.py  contact.py  grocery.py  medication.py  person.py  todo.py  user.py
backend/app/routers/: accounts.py  appointments.py  auth.py  birthdays.py  bp.py  bp_export.py  contacts.py  grocery.py  med_scan.py  medications.py  people.py  today.py  todos.py
backend/app/schemas/: account.py  appointment.py  auth.py  birthday.py  bp.py  contact.py  grocery.py  medication.py  today.py  todo.py
backend/app/services/: appointments.py  auth.py  birthdays.py  bp.py  contacts.py  grocery.py  med_scan.py  medications.py  people.py  scan_store.py  today.py  todos.py
backend/migrations/: env.py
backend/migrations/versions/: 636c8194274e_medication_changes_photo_path.py  9ba29a1e5c3e_contacts_table.py  (+3 more)
backend/tests/: conftest.py  test_accounts_api.py  test_api.py  test_appointments_api.py  test_appointments_service.py  test_auth_service.py  test_birthdays.py  test_bp_api.py  test_bp_export.py  test_bp_service.py  test_config.py  test_contacts_api.py  test_contacts_service.py  test_deps.py  test_grocery.py  test_med_scan_api.py  test_med_scan_extractor.py  test_medication_model.py  test_medications_api.py  test_medications_service.py  test_people_service.py  test_security.py  test_seed.py  test_today.py  test_todos.py  test_user_model.py
(+103 files in other folders)
