[project]
name = "family-hub"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "passlib[bcrypt]>=1.7",
  "itsdangerous>=2.2",
  "python-multipart>=0.0.12",
  "fastmcp>=2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "mypy>=1.13"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
  # Starlette TestClient nudges toward a not-yet-released httpx2; benign third-party deprecation.
  "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
